doc: add doc to organization methods
